--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 a {
-  color: #18d26e;
+  color: #5ca595;
   transition: 0.5s;
   text-decoration: none;
 }
@@ -56,7 +56,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #18d26e;
+  background: #5ca595;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -97,7 +97,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #18d26e;
+  border-top: 6px solid #5ca595;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -141,7 +141,7 @@ h6 {
   font-weight: 700;
   letter-spacing: 3px;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #5ca595;
 }
 
 #header .logo a {
@@ -187,9 +187,9 @@ h6 {
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-family: "Montserrat", sans-serif;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 600;
-  color: #fff;
+  color: #5ca595;
   white-space: nowrap;
   text-transform: uppercase;
   transition: 0.3s;
@@ -206,7 +206,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #18d26e;
+  color: #15227e;
 }
 
 .navbar .dropdown ul {
@@ -241,7 +241,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .navbar .dropdown:hover>ul {
@@ -336,7 +336,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .navbar-mobile .getstarted,
@@ -371,16 +371,104 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
   display: block;
 }
-
+.navbar-nav .nav-link.active{
+  color: #15227e !important;
+}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#carouselExampleDark {
+  height: 84.5vh;
+  width: 100%;
+  background: #000;
+  overflow: hidden;
+  position: relative;
+}
+
+#carouselExampleDark .carousel,
+#carouselExampleDark .carousel-inner,
+#carouselExampleDark .carousel-item,
+#carouselExampleDark .carousel-item::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.carousel-item::before {
+  content: "";
+  background-color: rgba(92,165,149,0.4);
+}
+
+.carousel-indicators button {
+  color: white;
+  background-color: none;
+}
+
+.carousel-dark .carousel-indicators [data-bs-target] {
+  background-color: white !important;
+}
+
+.carousel-control-prev-icon {
+  color: white;
+}
+
+.carousel-caption {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+.carousel-dark .carousel-caption {
+  color: white !important;
+}
+
+.bg_img_1 {
+  background-image: url('https://img.freepik.com/free-photo/sacks-healthy-legumes-grains_53876-65444.jpg?size=626&ext=jpg&ga=GA1.1.1388915471.1694001144&semt=ais') !important;
+}
+
+.bg_img_2 {
+  background-image: url('http://bbvmg.com/media/image-and-png/bio-fuel-image.png') !important;
+
+}
+
+.bg_img_3 {
+  background-image: url('https://img.freepik.com/free-photo/smooth-pebble-stack-wet-from-ocean-wave-generated-by-ai_188544-25791.jpg?t=st=1694076554~exp=1694080154~hmac=ac629e8e6ebb4e9e114cbcdb8439ddc97a35466ee68853f2453b091dca0afe02&w=1060') !important;
+}
+.bg_img_4 {
+  background-image: url('https://img.freepik.com/free-photo/plant-growing-soil-with-sun-shining-it_1340-38891.jpg?t=st=1694084163~exp=1694087763~hmac=6f050ef906d5c16bdccfad11911961197131b51131f52cd9b452e8070b9f17b8&w=996') !important;
+}
+.bg_img_5 {
+  background-image: url('https://img.freepik.com/free-photo/group-steel-rod-tight-by-chain-lift-up-construction-site_1150-10135.jpg?w=996&t=st=1694083492~exp=1694084092~hmac=46027ac9501837d7792fede90e5fcc6d7423840345019da465d05dcaa2d1b6e4') !important;
+}
+.bg_style {
+  height:84.5vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#carousel_title {
+  position: absolute;
+  right: 15%;
+  bottom: 50%;
+  left: 15%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.5rem;
+  color: #fff;
+  background-color:rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+
+
 #hero {
   width: 100%;
   height: 100vh;
@@ -522,12 +610,12 @@ h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #18d26e;
+  background: #5ca595;
 }
 
 #hero .btn-get-started:hover {
   background: #fff;
-  color: #18d26e;
+  color: #5ca595;
 }
 
 /*--------------------------------------------------------------
@@ -541,7 +629,7 @@ section {
 --------------------------------*/
 .section-header h3 {
   font-size: 32px;
-  color: #111;
+  color: #5ca595;
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
@@ -566,7 +654,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #18d26e;
+  background: #5ca595;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -648,7 +736,7 @@ section {
 }
 
 #featured-services i {
-  color: #18d26e;
+  color: #5ca595;
   font-size: 48px;
   display: inline-block;
   line-height: 1;
@@ -665,7 +753,7 @@ section {
 }
 
 #featured-services h4 a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #featured-services p {
@@ -720,7 +808,7 @@ section {
   height: 64px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #15227e;
   border-radius: 50%;
   border: 4px solid #fff;
   left: calc(50% - 32px);
@@ -743,7 +831,7 @@ section {
 }
 
 #about .about-col:hover i {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #about .about-col h2 {
@@ -756,11 +844,11 @@ section {
 }
 
 #about .about-col h2 a {
-  color: #000;
+  color: #15227e;
 }
 
 #about .about-col h2 a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #about .about-col p {
@@ -788,7 +876,7 @@ section {
 }
 
 #services .icon i {
-  color: #18d26e;
+  color: #15227e;
   font-size: 36px;
   line-height: 0;
   transition: 0.5s;
@@ -802,11 +890,11 @@ section {
 }
 
 #services .title a {
-  color: #111;
+  color: #15227e;
 }
 
 #services .box:hover .title a {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #services .description {
@@ -850,8 +938,8 @@ section {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #5ca595;
+  border: 2px solid #5ca595;
 }
 
 /* Call To Action Section
@@ -916,7 +1004,7 @@ section {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #facts .counters p {
@@ -962,7 +1050,7 @@ section {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #5ca595;
   color: #fff;
 }
 
@@ -1024,7 +1112,7 @@ section {
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: #18d26e;
+  background: #5ca595;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -1073,7 +1161,7 @@ section {
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -1106,11 +1194,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #18d26e;
+  border: 1px solid #5ca595;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #5ca595;
 }
 
 .portfolio-details .portfolio-info {
@@ -1175,11 +1263,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #18d26e;
+  border: 1px solid #5ca595;
 }
 
 #clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #5ca595;
 }
 
 /* Testimonials Section
@@ -1257,11 +1345,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #18d26e;
+  border: 1px solid #5ca595;
 }
 
 #testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #5ca595;
 }
 
 /* Team Section
@@ -1331,7 +1419,7 @@ section {
 }
 
 #team .member .social a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #team .member .social i {
@@ -1354,7 +1442,7 @@ section {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #contact .contact-info address,
@@ -1376,7 +1464,7 @@ section {
 }
 
 #contact .contact-info a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #contact .contact-address,
@@ -1423,7 +1511,7 @@ section {
 #contact .php-email-form .sent-message {
   display: none;
   color: #fff;
-  background: #18d26e;
+  background: #5ca595;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1443,7 +1531,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #5ca595;
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
 }
@@ -1462,11 +1550,11 @@ section {
 
 #contact .php-email-form input::focus,
 #contact .php-email-form textarea::focus {
-  background-color: #18d26e;
+  background-color: #5ca595;
 }
 
 #contact .php-email-form button[type=submit] {
-  background: #18d26e;
+  background: #5ca595;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1520,12 +1608,12 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .entry .entry-meta {
   margin-bottom: 15px;
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .entry .entry-meta ul {
@@ -1571,11 +1659,11 @@ section {
   transition: 0.3s;
   font-size: 14px;
   border-radius: 50px;
-  border: 2px solid #18d26e;
+  border: 2px solid #5ca595;
 }
 
 .blog .entry .entry-content .read-more a:hover {
-  background: #18d26e;
+  background: #5ca595;
   color: #fff;
 }
 
@@ -1610,7 +1698,7 @@ section {
   top: 0;
   bottom: 0;
   width: 3px;
-  background-color: #18d26e;
+  background-color: #5ca595;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -1621,7 +1709,7 @@ section {
 }
 
 .blog .entry .entry-footer i {
-  color: #18d26e;
+  color: #5ca595;
   display: inline;
 }
 
@@ -1631,7 +1719,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1704,7 +1792,7 @@ section {
 }
 
 .blog .blog-author .social-links a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .blog-author p {
@@ -1750,7 +1838,7 @@ section {
 
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .blog-comments .comment h5 .reply i {
@@ -1813,7 +1901,7 @@ section {
   border-radius: 50px;
   padding: 10px 30px;
   border: 0;
-  background-color: #18d26e;
+  background-color: #5ca595;
 }
 
 .blog .blog-comments .reply-form .btn-primary:hover {
@@ -1821,7 +1909,7 @@ section {
 }
 
 .blog .blog-pagination {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .blog-pagination ul {
@@ -1837,7 +1925,7 @@ section {
 }
 
 .blog .blog-pagination li a {
-  color: #18d26e;
+  color: #5ca595;
   padding: 6px 20px;
   display: flex;
   align-items: center;
@@ -1848,7 +1936,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-  background: #18d26e;
+  background: #5ca595;
   border-radius: 50px;
 }
 
@@ -1906,7 +1994,7 @@ section {
   font-size: 16px;
   padding: 0 30px;
   margin: -1px;
-  background: #18d26e;
+  background: #5ca595;
   color: #fff;
   transition: 0.3s;
   line-height: 0;
@@ -1936,7 +2024,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .sidebar .categories ul a span {
@@ -1966,7 +2054,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 .blog .sidebar .recent-posts time {
@@ -1995,7 +2083,7 @@ section {
   font-size: 14px;
   padding: 6px 20px;
   margin: 0 6px 8px 0;
-  border: 1px solid #18d26e;
+  border: 1px solid #5ca595;
   display: inline-block;
   border-radius: 50px;
   transition: 0.3s;
@@ -2003,7 +2091,7 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  background: #18d26e;
+  background: #5ca595;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2039,7 +2127,7 @@ section {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #5ca595;
 }
 
 #footer .footer-top .footer-info p {
@@ -2071,7 +2159,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #18d26e;
+  background: #5ca595;
   color: #fff;
 }
 
@@ -2099,7 +2187,7 @@ section {
 }
 
 #footer .footer-top h4::after {
-  background: #18d26e;
+  background: #5ca595;
   width: 60px;
 }
 
@@ -2132,7 +2220,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #18d26e;
+  color: #5ca595;
 }
 
 #footer .footer-top .footer-contact {
@@ -2154,7 +2242,7 @@ section {
 }
 
 #footer .footer-top .footer-newsletter input[type=submit] {
-  background: #18d26e;
+  background: #5ca595;
   border: 0;
   width: 35%;
   padding: 6px 0;
