title in small devices

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -467,7 +467,11 @@ h6 {
   text-align: center;
 }
 
-
+@media only screen and (min-width:320px) and (max-width:768px){
+  .sm_device_title{
+    display: block;
+  }
+}
 
 #hero {
   width: 100%;
