--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -469,7 +469,7 @@ h6 {
 
 @media only screen and (min-width:320px) and (max-width:768px){
   .sm_device_title{
-    display: block;
+    display: block !important;
   }
 }
 
