--- a/src/components/progress.css
+++ b/src/components/progress.css
@@ -1,3 +1,10 @@
 .bars{
     padding: 0rem 0rem 1rem 0rem;
+    position: relative;
+}
+.indicator{
+    position: absolute;
+    color: white;
+    align-content: center;
+    padding: 5px 0 4px 10px;
 }
