--- a/src/components/Gallery_products/Product.css
+++ b/src/components/Gallery_products/Product.css
@@ -72,7 +72,7 @@ ul {
       padding-bottom: 10px;
     }
     .portfolio_text{
-        padding: 10px;
+        padding: 15px 22px;
     }
     .portfolio_item_content {
         position: static;
