--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,39 +49,6 @@ h6 {
   padding: 0;
 }
 
-/*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
-.back-to-top {
-  position: fixed;
-  visibility: hidden;
-  opacity: 0;
-  right: 15px;
-  bottom: 15px;
-  z-index: 996;
-  background: #5ca595;
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  transition: all 0.4s;
-}
-
-.back-to-top i {
-  font-size: 28px;
-  color: #fff;
-  line-height: 0;
-}
-
-.back-to-top:hover {
-  background: #2ce782;
-  color: #fff;
-}
-
-.back-to-top.active {
-  visibility: visible;
-  opacity: 1;
-}
-
 /* Prelaoder */
 #preloader {
   position: fixed;
@@ -208,6 +175,11 @@ h6 {
 
   .btn-close:focus {
     box-shadow: none !important;
+  }
+  .sticky_header{
+    position: sticky !important;
+    top: 0;
+    z-index: 1020;
   }
 }
 
