--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -212,10 +212,10 @@ h6 {
 .navbar .dropdown ul {
   display: block;
   position: absolute;
-  left: 14px;
+  left: 34px;
   top: calc(100% + 30px);
-  margin: 0;
-  padding: 10px 0;
+  margin-top: 4px;
+  padding: 5px 0;
   z-index: 99;
   opacity: 0;
   visibility: hidden;
