added carousel slide

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -963,9 +963,9 @@ section {
 
 /* Call To Action Section
 --------------------------------*/
-#skills {
+/* #skills {
   padding: 60px 0;
-}
+} */
 
 #skills .progress {
   height: 35px;
