--- a/src/components/Carousel_products/carousel.css
+++ b/src/components/Carousel_products/carousel.css
@@ -137,7 +137,7 @@
   --bg: #f5f5f5;
 } */
 
-html {
+/* html {
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
@@ -158,7 +158,7 @@ html {
   html {
     zoom: 2.5;
   }
-} */
+} */ 
 
 /* ::-webkit-scrollbar {
   width: 1.3rem;
