--- a/src/components/Carousel_products/carousel.css
+++ b/src/components/Carousel_products/carousel.css
@@ -122,66 +122,66 @@
 
 
 
-   /* *,
+   *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style-type: none;
-} */
+}
 
-/* :root {
+:root {
   --primary: #15227e;
   --white: #ffffff;
   --bg: #f5f5f5;
-} */
+}
 
-/* html {
+ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
 @media (min-width: 1440px) {
   html {
-    zoom: 1.5;
+    zoom: 1;
   }
 }
 
 @media (min-width: 2560px) {
   html {
-    zoom: 1.7;
+    zoom: 1.2;
   }
 }
 
 @media (min-width: 3860px) {
   html {
-    zoom: 2.5;
+    zoom: 1.5;
   }
-} */ 
+} 
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 1.3rem;
-} */
+}
 
-/* ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   border-radius: 1rem;
   background: #797979;
   transition: all 0.5s ease-in-out;
-} */
+}
 
-/* ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: #222224;
-} */
+}
 
-/* ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: #f9f9f9;
-} */
+}
 
-/* body {
+body {
   font-size: 1.6rem;
   background: var(--bg);
-} */
+}
 
 .container_for_swiper {
   max-width: 124rem;
@@ -189,11 +189,11 @@
   margin: 0 auto;
 }
 
-/* .heading {
+.heading {
   padding: 1rem 0;
   font-size: 3.5rem;
   text-align: center;
-} */
+}
 
 .swiper_container {
   transform: translate3d(0,0,0);
