--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -463,19 +463,30 @@ h6 {
 #carousel_title {
   position: absolute;
   right: 15%;
-  bottom: 50%;
+  bottom: 43%;
   left: 15%;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.3);
   text-align: center;
 }
-
+#carousel_title h1 {
+  font-size: 4rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  line-height: 3.5rem;
+  padding: 0.7rem;
+}
 @media only screen and (min-width:320px) and (max-width:768px) {
+  #carousel_title h1 {
+    font-weight: 600;
+    font-size: 3rem;
+  }
   #carousel_title {
-    bottom: 28% !important;
+    bottom: 35% !important;
+    font-size: 2rem;
   }
 
   .sm_device_title {
