--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -654,12 +654,19 @@ section {
 
 /* Sections Header
 --------------------------------*/
+@media only screen and (min-width:768px){
+  .section-header h3 {
+    font-size: 40px !important;
+    padding-bottom: 15px  !important;
+    margin-bottom: 28px !important;
+  }
+}
 .section-header h3 {
   font-size: 32px;
   color: #5ca595;
   text-transform: uppercase;
   text-align: center;
-  font-weight: 700;
+  font-weight: 600;
   position: relative;
   padding-bottom: 15px;
 }
@@ -791,8 +798,9 @@ section {
 }
 
 #featured-services p {
-  font-size: 17px;
+  font-size: 18px;
   line-height: 24px;
+  text-align: justify;
   color: #fff;
   margin-bottom: 0;
 }
@@ -892,7 +900,8 @@ section {
 }
 
 #about .about-col p {
-  font-size: 14px;
+  font-size: 16px;
+  text-align: justify;
   line-height: 24px;
   color: #333;
   margin-bottom: 0;
@@ -911,6 +920,12 @@ section {
   margin-bottom: 30px;
 }
 
+@media only screen and (max-width:768px){
+  #services .icon {
+    padding: 0 1rem !important;
+  }
+}
+
 #services .icon {
   float: left;
 }
@@ -926,7 +941,7 @@ section {
   margin-left: 60px;
   font-weight: 700;
   margin-bottom: 15px;
-  font-size: 18px;
+  font-size: 19px;
 }
 
 #services .title a {
@@ -934,8 +949,10 @@ section {
 }
 
 #services .description {
-  font-size: 14px;
+  font-size: 16px;
+  text-align: justify;
   margin-left: 60px;
+  padding-right: 10px;
   line-height: 24px;
   margin-bottom: 0;
 }
@@ -948,13 +965,20 @@ section {
   padding: 60px 0;
 }
 
+@media only screen and (max-width:768px){
+  #call-to-action h3 {
+    font-size: 32px !important;
+ }
+}
 #call-to-action h3 {
   color: #fff;
-  font-size: 28px;
-  font-weight: 700;
+  font-size: 40px;
+  font-weight: 600;
 }
 
 #call-to-action p {
+  font-size: 16px;
+  text-align: justify;
   color: #fff;
 }
 
@@ -1059,12 +1083,12 @@ section {
 /* Portfolio Section
 --------------------------------*/
 #portfolio {
-  padding: 30px 0;
+  padding: 9rem 0;
 }
 
 @media screen and (max-width:768px) {
   #portfolio {
-    padding: 5px 0;
+    padding: 8rem 0;
   }
 }
 
