--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
     background: #fff;
     color: #666666;
     font-family: "Open Sans", sans-serif;
-    overflow: auto;
+    overflow: auto !important;
   }
   
   a {
