--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@ body {
     font-family: "Montserrat", sans-serif;
     font-size: 15px;
     font-weight: 600;
-    color: #5ca595;
+    color: #15227e;
     white-space: nowrap;
     text-transform: uppercase;
     transition: 0.3s;
