--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -17,6 +17,6 @@
         line-height: 22px;
         color: #333;
         margin-bottom: 0;
-        padding: 0 0px 18px 0px;
+        padding: 0px 0px 18px 0px !important;
       }
   }
