--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -15,7 +15,7 @@
         font-weight: 500;
         text-align: justify;
         line-height: 22px;
-        color: #333;
+        color: #7d7d7d;
         margin-bottom: 0;
         padding: 0px 0px 18px 0px !important;
       }
