--- a/src/pages/Products/Chemicals/chemical.css
+++ b/src/pages/Products/Chemicals/chemical.css
@@ -1,6 +1,6 @@
 .hero {
     min-height: 45vh;
-   
+
 }
 
 .hero_bg::before {
@@ -23,25 +23,43 @@
     position: relative;
     z-index: 1;
 }
-.breadcrums{
+
+.breadcrums {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding-top: 10rem;
 }
-.breadcrums_title{
+
+.breadcrums_title {
     font-size: 6rem;
     color: white;
 }
-.breadcrums_subtitle{
+
+.breadcrums_subtitle {
     display: flex;
     justify-content: space-around;
     font-size: 2rem;
     padding-left: 0 !important;
     /* margin-left: 0 !important; */
 }
-.breadcrums_items{
+
+.breadcrums_items {
     padding-left: 2rem;
     color: white;
+}
+
+.icons_section{
+    padding: 10rem 0 7rem 0;
+}
+
+@media only screen and (min-width:320px) and (max-width:768px){
+    .sm_flex_col{
+        flex-direction: column;
+        text-align: center;
+    }
+    .icons_section{
+        padding: 5rem 0 2rem 0;
+    }
 }
