--- a/src/pages/Products/Chemicals/searchbar.css
+++ b/src/pages/Products/Chemicals/searchbar.css
@@ -1,6 +1,6 @@
 .input_box{
     /* margin-top: 5rem; */
-    height: 35vh;
+    height: 45vh;
     background-color: #eff6f7;
     /* box-shadow: ; */
     display: flex;
@@ -9,19 +9,17 @@
     justify-content: center;
 }
 
-
-
 .input-container {
     z-index: 1;
     position: relative;
     display: flex;
     align-items: center;
-    margin: 4% 0 2% 0%;
+    padding: 0% 0 5% 0%;
     font-size: 16px;
   }
   @media only screen and (min-width:320px) and (max-width:768px){
     .input-container {
-        margin: 2% 0 2% 12%;
+        padding: 0% 0% 0% 0%;
       } 
   }
   .search_input {
