--- a/src/App.css
+++ b/src/App.css
@@ -795,7 +795,7 @@ body {
     margin-bottom: 0;
   }
   
-  /* About Us Section
+  /* About Us Section of Home Page Starts
   --------------------------------*/
   #about {
     background: url("../public/assets/img/about-bg.jpg") center top no-repeat fixed;
@@ -2345,3 +2345,234 @@ body {
 .dropdown-item:active{
 background-color: rgba(203, 201, 201, 0.4) !important;
 }
+
+/* hero section with breadcrums starts */
+.hero {
+    min-height: 45vh;
+
+}
+
+.hero_bg::before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: -1;
+}
+
+.bg_img1 {
+    background-image: url('../public/assets/images/Products-all-img/chemicals/bg_img/chemicals_bg.webp');
+}
+
+.bg_img2 {
+    background-image: url('https://bbvmg.com/media/image-and-png/aboutus.jpg');
+}
+
+.bg_img3 {
+    background-image: url('../public/assets/images/Services/service_bg.webp');
+}
+
+.bg_img4 {
+    background-image: url('../public/assets/images/Contact-Us/contact_bg.webp');
+}
+
+.hero_bg {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+    position: relative;
+    z-index: 1;
+}
+
+.breadcrums {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 10rem;
+}
+
+.breadcrums_title {
+    font-size: 6rem;
+    color: white;
+}
+
+.breadcrums_subtitle {
+    display: flex;
+    justify-content: space-around;
+    font-size: 2rem;
+    padding-left: 0 !important;
+    /* margin-left: 0 !important; */
+}
+
+.breadcrums_items {
+    padding-left: 2rem;
+    color: white;
+}
+
+.icons_section {
+    padding: 10rem 0 7rem 0;
+}
+
+@media only screen and (min-width:320px) and (max-width:768px) {
+    .sm_flex_col {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .icons_section {
+        padding: 5rem 0 2rem 0;
+    }
+    .sm_pd_top{
+        padding-top: 2rem;
+    }
+}
+/* hero section with breadcrums ends */
+
+/* About Us Page Css Starts */
+.about .content h3 {
+  font-weight: 700;
+  font-size: 32px;
+  font-family: var(--font-secondary);
+  color: #001f8d;
+}
+
+.about .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.about .content ul li {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 40px;
+}
+
+.about .content ul i {
+  flex-shrink: 0;
+  font-size: 48px;
+  color: var(--color-primary);
+  margin-right: 20px;
+  line-height: 0;
+}
+
+.about .content ul h5 {
+  font-size: 18px;
+  font-weight: 700;
+  color: #19335c;
+}
+
+.about .content ul p {
+  font-size: 15px;
+}
+
+.about .content p:last-child {
+  margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
+# Stats Counter Section Starts
+--------------------------------------------------------------*/
+.stats-counter .stats-item {
+  padding: 30px;
+  width: 100%;
+}
+
+.stats-counter .stats-item span {
+  font-size: 48px;
+  display: block;
+  color: var(--color-secondary);
+  font-weight: 700;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.stats-counter .stats-item span:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 25px;
+  height: 3px;
+  background: var(--color-primary);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.stats-counter .stats-item p {
+  padding: 0;
+  margin: 0;
+  font-family: var(--font-primary);
+  font-size: 15px;
+  font-weight: 500;
+  color: var(--color-secondary);
+}
+/*--------------------------------------------------------------
+# Stats Counter Section Ends
+--------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
+# Our Team Section Starts
+--------------------------------------------------------------*/
+.team .member {
+  text-align: center;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid rgba(14, 29, 52, 0.15);
+}
+
+.team .member img {
+  margin: -1px -1px 30px -1px;
+}
+
+.team .member .member-content {
+  padding: 0 20px 30px 20px;
+}
+
+.team .member h4 {
+  font-weight: 700;
+  margin-bottom: 2px;
+  font-size: 18px;
+}
+
+.team .member span {
+  font-style: italic;
+  display: block;
+  font-size: 13px;
+  color: #6c757d;
+}
+
+.team .member p {
+  padding-top: 10px;
+  font-size: 14px;
+  font-style: italic;
+  color: #6c757d;
+}
+
+.team .member .social {
+  margin-top: 15px;
+}
+
+.team .member .social a {
+  color: rgba(14, 29, 52, 0.5);
+  transition: 0.3s;
+}
+
+.team .member .social a:hover {
+  color: var(--color-primary);
+}
+
+.team .member .social i {
+  font-size: 18px;
+  margin: 0 2px;
+}
+/*--------------------------------------------------------------
+# Our Team Section Ends
+--------------------------------------------------------------*/
+/* About Us Page Css Ends */
