--- a/src/components/Testimonials/testimonials.css
+++ b/src/components/Testimonials/testimonials.css
@@ -1,146 +1,119 @@
-.testimonialSwiper {
-    width: 380px !important;
-    height: 600px !important;
-    padding-bottom: 80px ;
-  }
-  @media only screen and (min-width:320px) and (max-width:786px){
-    .testimonialSwiper {
-      width: 265px !important;
-      height: 550px !important;
-    }
-    .testimonials .testimonial-item p {
-      font-size: 16px !important;
-    }
-  }
-  
-  .testimonialSwiperSlide {
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
-    border-radius: 18px !important;
-    font-size: 22px !important;
-    font-weight: bold !important;
-    color: #15227e !important;
-  }
-  
-  .SwiperSlide:nth-child(1n) {
-    box-shadow: rgba(0, 0, 0, 0.9) 0px 4px 12px;
-    background-color: white;
-  }
-  
-  .SwiperSlide:nth-child(2n) {
-    box-shadow: rgba(0, 0, 0, 0.9) 0px 4px 12px;
-    background-color: white;
-  }
-  
-  .SwiperSlide:nth-child(3n) {
-    box-shadow: rgba(0, 0, 0, 0.9) 0px 4px 12px;
-    background-color: white;
-  }
-  
-  /*--------------------------------------------------------------
-  # Testimonials Section
-  --------------------------------------------------------------*/
-  .testimonials {
-    padding: 80px 0 !important;
-    /* background: url("../img/testimonials-bg.jpg") no-repeat; */
-    background-position: center center;
-    background-size: cover;
-    position: relative;
-  }
-  
-  .testimonials .section-header {
-    margin-bottom: 40px;
-  }
-  
-  .testimonials .testimonials-carousel,
-  .testimonials .testimonials-slider {
-    overflow: hidden;
-  }
-  
-  .testimonials .testimonial-item {
-    text-align: center;
-    color: #15227e;
-  }
-  
-  .testimonials .testimonial-item .testimonial-img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    border: 6px solid rgba(255, 255, 255, 0.15);
-    margin: 0 auto;
-  }
-  
-  .testimonials .testimonial-item h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin: 10px 0 5px 0;
-    color: #15227e;
-  }
-  
-  .testimonials .testimonial-item h4 {
-    font-size: 14px;
-    color: rgba(92, 165, 149, 0.6);
-    margin: 0 0 15px 0;
-  }
-  
-  .testimonials .testimonial-item .stars {
-    margin-bottom: 15px;
-  }
-  
-  .testimonials .testimonial-item .stars i {
-    color: #ffc107;
-    margin: 0 1px;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-left,
-  .testimonials .testimonial-item .quote-icon-right {
-    color: rgba(255, 255, 255, 0.6);
-    font-size: 26px;
-    line-height: 0;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-left {
-    display: inline-block;
-    left: -5px;
-    position: relative;
-    color: #5ca595;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-right {
-    display: inline-block;
-    right: -5px;
-    position: relative;
-    top: 10px;
-    transform: scale(-1, -1);
-    color: #5ca595;
-  }
-  
+/*--------------------------------------------------------------
+# Testimonials Section
+--------------------------------------------------------------*/
+.testimonials {
+  padding: 80px 0;
+  background: url('../../../public/assets/images/testimonials/testimonials-bg.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.testimonials::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(92,165,149,0.6);
+}
+
+.testimonials .section-header {
+  margin-bottom: 40px;
+}
+
+.testimonials .testimonials-carousel,
+.testimonials .testimonials-slider {
+  overflow: hidden;
+}
+
+.testimonials .testimonial-item {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  color: #fff;
+}
+
+.testimonials .testimonial-item .testimonial-img {
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  border: 6px solid rgba(255, 255, 255, 0.6);
+  margin: 0 auto;
+}
+
+.testimonials .testimonial-item h3 {
+  font-size: 25px;
+  font-weight: bold;
+  margin: 10px 0 5px 0;
+  color: #fff;
+}
+
+.testimonials .testimonial-item h4 {
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.6);
+  margin: 0 0 15px 0;
+}
+
+.testimonials .testimonial-item .stars {
+  margin-bottom: 15px;
+}
+
+.testimonials .testimonial-item .stars i {
+  font-size: 20px;
+  color: #ffc107;
+  margin: 0 1px;
+}
+
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 26px;
+  line-height: 0;
+}
+
+.testimonials .testimonial-item .quote-icon-left {
+  display: inline-block;
+  left: -5px;
+  position: relative;
+  color: #ffc107;
+}
+
+.testimonials .testimonial-item .quote-icon-right {
+  display: inline-block;
+  right: -5px;
+  position: relative;
+  color: #ffc107;
+  top: 10px;
+  transform: scale(-1, -1);
+}
+
+.testimonials .testimonial-item p {
+  font-size: 22px;
+  font-weight: 500;
+  font-style: italic;
+  margin: 0 auto 15px auto;
+}
+
+.testimonialSwiper .swiper-pagination {
+  margin: auto;
+  margin-top: 20px !important;
+  position: relative !important;
+}
+
+.testimonialSwiper .swiper-pagination .swiper-pagination-bullet {
+  width: 12px !important;
+  height: 12px !important;
+  background-color: rgb(92,165,149) !important;
+  opacity: 0.5 !important;
+}
+
+.testimonialSwiper .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: rgb(21,34,126) !important;
+  opacity: 1 !important;
+}
+
+@media (min-width: 992px) {
   .testimonials .testimonial-item p {
-    font-size: 18px;
-    font-style: italic;
-    margin: 0 auto 15px auto;
+    width: 80%;
   }
-  
-  .testimonials .swiper-pagination {
-    margin-top: 20px;
-    position: relative;
-  }
-  
-  .testimonials .swiper-pagination .swiper-pagination-bullet {
-    width: 12px;
-    height: 12px;
-    background-color: rgba(255, 255, 255, 0.4);
-    opacity: 0.5;
-  }
-  
-  .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #15227e;
-    opacity: 1;
-  }
-  
-  @media (min-width: 992px) {
-    .testimonials .testimonial-item p {
-      width: 80%;
-    }
-  }
+}
