--- a/src/App.css
+++ b/src/App.css
@@ -681,7 +681,7 @@ section {
   margin: auto;
 }
 
-.section-header span {
+/* .section-header span {
   position: absolute;
   top: 12px;
   color: rgba(14, 29, 52, 0.06);
@@ -692,7 +692,7 @@ section {
   font-size: 56px;
   text-transform: uppercase;
   line-height: 0;
-}
+} */
 
 @media (max-width: 640px) {
   .section-header h2 {
@@ -700,9 +700,9 @@ section {
     margin-bottom: 15px;
   }
 
-  .section-header span {
+  /* .section-header span {
     font-size: 38px;
-  }
+  } */
 }
 
 @media only screen and (min-width:768px) {
@@ -1399,7 +1399,7 @@ section {
   --------------------------------*/
 #team {
   background: #fff;
-  padding: 60px 0 0 0 !important;
+  padding: 60px 0 80px 0 !important;
 }
 
 #team .member {
@@ -2569,74 +2569,5 @@ section {
 /*--------------------------------------------------------------
 # Our Team Section Ends
 --------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Frequently Asked Questions Section Css Starts
---------------------------------------------------------------*/
-.faq {
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
 
-.faq .accordion-item {
-  border: 0;
-  margin-bottom: 10px;
-}
-
-.faq .accordion-collapse {
-  border: 0;
-}
-
-.faq .accordion-button {
-  padding: 15px 30px 20px 60px;
-  font-weight: 600;
-  border: 0;
-  font-size: 18px;
-  color: var(--color-default);
-  text-align: left;
-  background: rgba(14, 29, 52, 0.03);
-  border-radius: 5px;
-}
-
-.faq .accordion-button:focus {
-  box-shadow: none;
-}
-
-.faq .accordion-button:not(.collapsed) {
-  color: var(--color-primary);
-  border-bottom: 0;
-  box-shadow: none;
-}
-
-.faq .question-icon {
-  position: absolute;
-  top: 14px;
-  left: 25px;
-  font-size: 20px;
-  color: var(--color-primary);
-}
-
-.faq .accordion-button:after {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-}
-
-.faq .accordion-body {
-  padding: 0 30px 25px 60px;
-  border: 0;
-  background: rgba(239, 246, 247, 1);
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-.accordion-button:not(.collapsed) {
-  color: var(--bs-accordion-active-color);
-  background-color:
-    #eff6f7 !important;
-  box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
-}
-
-/*--------------------------------------------------------------
-# Frequently Asked Questions Section Css Ends
---------------------------------------------------------------*/
 /* About Us Page Css Ends */
