added + in counter count

--- a/src/App.css
+++ b/src/App.css
@@ -2306,7 +2306,9 @@ section {
   padding: 30px;
   width: 100%;
 }
-
+.purecounter div::after {
+  content: "+" !important;
+}
 .stats-counter .stats-item span {
   font-size: 48px;
   display: block;
@@ -2321,7 +2323,7 @@ section {
   content: "";
   position: absolute;
   display: block;
-  width: 25px;
+  width: 35px;
   height: 3px;
   background: #5ca595;
   left: 0;
@@ -2334,7 +2336,7 @@ section {
   padding: 0;
   margin: 0;
   font-family: #15227e;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
   color: #15227e;
 }
