--- a/src/pages/Products/AgroCommodities/agro.css
+++ b/src/pages/Products/AgroCommodities/agro.css
@@ -1,4 +1,10 @@
+#agro_commodities {
+    padding: 60px 0;
+}
 
-#agro_commodities{
-padding: 60px 0;
+@media only screen and (min-width:320px) and (max-width:768px) {
+    .breadcrums_title {
+        font-size: 35px;
+        text-align: center;
+    }
 }
