--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -195,7 +195,8 @@
 .contact_desc {
     text-align: center;
     color: rgb(11, 11, 11);
-    padding-bottom: 30px;
+    padding-top: 25px;
+    padding-bottom: 35px;
 }
 
 .contact_info_cards {
