minified all documents

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -1,257 +1,1 @@
-/* Contact Section
-  --------------------------------*/
-/* #contact {
-    padding: 60px 0;
-  }
-  
-  #contact .contact-info {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  #contact .contact-info i {
-    font-size: 48px;
-    display: inline-block;
-    margin-bottom: 10px;
-    color: #5ca595;
-  }
-  
-  #contact .contact-info address,
-  #contact .contact-info p {
-    margin-bottom: 0;
-    color: #000;
-  }
-  
-  #contact .contact-info h3 {
-    font-size: 18px;
-    margin-bottom: 15px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #999;
-  }
-  
-  #contact .contact-info a {
-    color: #000;
-  }
-  
-  #contact .contact-info a:hover {
-    color: #5ca595;
-  }
-  
-  #contact .contact-address,
-  #contact .contact-phone,
-  #contact .contact-email {
-    margin-bottom: 20px;
-  }
-  
-  @media (min-width: 768px) {
-  
-    #contact .contact-address,
-    #contact .contact-phone,
-    #contact .contact-email {
-      padding: 20px 0;
-    }
-  }
-  
-  @media (min-width: 768px) {
-    #contact .contact-phone {
-      border-left: 1px solid #ddd;
-      border-right: 1px solid #ddd;
-    }
-  }
-  
-  #contact .php-email-form {
-    box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-    padding: 30px;
-    background: #fff;
-  }
-  
-  #contact .php-email-form .error-message {
-    display: none;
-    color: #fff;
-    background: #ed3c0d;
-    text-align: left;
-    padding: 15px;
-    font-weight: 600;
-  }
-  
-  #contact .php-email-form .error-message br+br {
-    margin-top: 25px;
-  }
-  
-  #contact .php-email-form .sent-message {
-    display: none;
-    color: #fff;
-    background: #5ca595;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-  }
-  
-  #contact .php-email-form .loading {
-    display: none;
-    background: #fff;
-    text-align: center;
-    padding: 15px;
-  }
-  
-  #contact .php-email-form .loading:before {
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    margin: 0 10px -6px 0;
-    border: 3px solid #5ca595;
-    border-top-color: #eee;
-    animation: animate-loading 1s linear infinite;
-  }
-  
-  #contact .php-email-form .form-group {
-    margin-bottom: 20px;
-  }
-  
-  #contact .php-email-form input,
-  #contact .php-email-form textarea {
-    padding: 10px 14px;
-    border-radius: 0;
-    box-shadow: none;
-    font-size: 15px;
-  }
-  
-  #contact .php-email-form input::focus,
-  #contact .php-email-form textarea::focus {
-    background-color: #5ca595;
-  }
-  
-  #contact .php-email-form button[type=submit] {
-    background: #5ca595;
-    border: 0;
-    padding: 10px 30px;
-    color: #fff;
-    transition: 0.4s;
-    cursor: pointer;
-  }
-  
-  #contact .php-email-form button[type=submit]:hover {
-    background: #13a456;
-  }
-  .map{
-    padding: 60px 0;
-  } */
-.contact_form input{
-    font-size: 18px;
-}
-.contact_form textarea{
-    font-size: 18px;
-}
-.contact_section{
-    padding-bottom: 60px;
-}
-.map {
-    padding: 60px 0;
-}
-#contact p {
-    font-size: 18px;
-}
-.contact_title {
-    color: #5ca595;
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    position: relative;
-    padding: 15px;
-}
-
-.contact_title::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 120px;
-    height: 1px;
-    background: #ddd;
-    bottom: 1px;
-    left: calc(50% - 60px);
-}
-
-.contact_title::after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 40px;
-    height: 3px;
-    background: #5ca595;
-    bottom: 0;
-    left: calc(50% - 20px);
-}
-
-.contact_title p {
-    font-size: 18px;
-    text-align: justify;
-}
-
-
-.contact_desc {
-    text-align: center;
-    color: rgb(11, 11, 11);
-    padding-top: 25px;
-    padding-bottom: 35px;
-}
-
-.contact_info_cards {
-    text-align: center;
-    margin-bottom: 22px;
-}
-
-.contact_info_cards i {
-    color: #15227e;
-    font-size: 42px;
-    display: inline-block;
-    margin-bottom: 10px;
-}
-
-.contact_info_cards i:hover {
-    color: #5ca595;
-}
-
-.contact_info_cards h3 {
-    color: #15227e;
-    font-size: 18px;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-
-.contact_info_cards h3:hover {
-    color: #5ca595;
-}
-
-.contact_info_cards a {
-    text-decoration: none;
-    color: black;
-}
-
-.contact_info_cards a:hover {
-
-    color: #5ca595;
-}
-
-.form-group textarea {
-    margin-left: -1px;
-}
-
-.form-control {
-    margin-top: 27px;
-    padding: 12px;
-}
-
-.contact_form button[type=submit] {
-    background: #5ca595;
-    cursor: pointer;
-    transition: 0.4s;
-    color: #fff;
-    padding: 10px 30px;
-    border: none;
-    margin-top: 25px;
-}
+.contact_form input{font-size:18px}.contact_form textarea{font-size:18px}.contact_section{padding-bottom:60px}.map{padding:60px 0}#contact p{font-size:18px}.contact_title{color:#5ca595;font-size:40px;font-weight:700;text-transform:uppercase;text-align:center;position:relative;padding:15px}.contact_title::before{content:"";position:absolute;display:block;width:120px;height:1px;background:#ddd;bottom:1px;left:calc(50% - 60px)}.contact_title::after{content:"";position:absolute;display:block;width:40px;height:3px;background:#5ca595;bottom:0;left:calc(50% - 20px)}.contact_title p{font-size:18px;text-align:justify}.contact_desc{text-align:center;color:rgb(11,11,11);padding-top:25px;padding-bottom:35px}.contact_info_cards{text-align:center;margin-bottom:22px}.contact_info_cards i{color:#15227e;font-size:42px;display:inline-block;margin-bottom:10px}.contact_info_cards i:hover{color:#5ca595}.contact_info_cards h3{color:#15227e;font-size:18px;text-transform:uppercase;font-weight:bold;margin-bottom:15px}.contact_info_cards h3:hover{color:#5ca595}.contact_info_cards a{text-decoration:none;color:black}.contact_info_cards a:hover{color:#5ca595}.form-group textarea{margin-left:-1px}.form-control{margin-top:27px;padding:12px}.contact_form button[type=submit]{background:#5ca595;cursor:pointer;transition:.4s;color:#fff;padding:10px 30px;border:none;margin-top:25px}
