--- a/src/pages/Products/AgroCommodities/agro.css
+++ b/src/pages/Products/AgroCommodities/agro.css
@@ -1,237 +1,1 @@
-#agro_commodities {
-    padding: 60px 0;
-}
-
-@media only screen and (min-width:320px) and (max-width:768px) {
-    .breadcrums_title {
-        font-size: 40px;
-        text-align: center;
-    }
-}
-
-/* new css*/
-.timeline {
-    position: relative;
-    margin: auto;
-}
-.product_card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 5rem;
-    position: relative;
-    animation: movedown 1s linear forwards;
-    opacity: 0;
-}
-.product_card:nth-child(1) {
-    animation-delay: 0s;
-}
-
-.product_card:nth-child(2) {
-    animation-delay: 1s;
-}
-
-.product_card:nth-child(3) {
-    animation-delay: 2s;
-}
-
-.product_card:nth-child(4) {
-    animation-delay: 3s;
-}
-
-.product_card:nth-child(5) {
-    animation-delay: 4s;
-}
-
-.product_card:nth-child(6) {
-    animation-delay: 5s;
-    padding-bottom: 0rem;
-}
-
-@keyframes movedown {
-    0% {
-        opacity: 1;
-        transform: translateY(-30px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-.text_box {
-    padding: 0px 20px;
-    background-color: #fff;
-    position: relative;
-    border-radius: 6px;
-    font-size: 18px;
-}
-.text_card {
-    font-size: 32px;
-    font-weight: 500;
-    color: #15227e;
-}
-.text_box h2 {
-    font-weight: 600;
-}
-.product_desc {
-    font-size: 18px;
-    text-align: justify;
-}
-.ul_list {
-    padding: 1px;
-}
-.ul_list li {
-    list-style: none;
-    font-size: 18px;
-    padding: 7px 0;
-}
-.ul_list li i {
-    color: #15227e;
-    font-size: 22px;
-}
-.right_container {
-    padding-left: 4.1rem !important;
-}
-.animated_icon_div {
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    border: 1px solid black;
-    background: white;
-    border-radius: 50%;
-    right: -7.5%;
-    top: 40%;
-    z-index: 10;
-}
-@media only screen and (min-width:769px) and (max-width:1199px){
-    .animated_icon_div {
-        right: -10.5%; 
-    }
-}
-@media only screen and (min-width:1200px) and (max-width:1400px){
-    .animated_icon_div {
-        right: -9%; 
-    }
-}
-@media only screen and (min-width:1400px) and (max-width:3000px){
-    .animated_icon_div {
-        right: -7.5%; 
-    }
-}
-@media only screen and (min-width: 1280px) {
-    .right_container {
-        padding-left: 4.2rem !important;
-    }
-  }
-.container_part{
-    position: relative;
-    z-index: -1;
-}
-.container_part .animated_icon {
-    position: relative;
-    width: 50px;
-    right: -15px;
-    top: 15px;
-    z-index: 10;
-}
-
-@media only screen and (min-width:320px) and (max-width:768px) {
-    .animated_icon_div {
-        position: absolute;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        background: white;
-        left: -7px;
-        top: 13%;
-        z-index: 10;
-    }
-    
-    .animated_icon_div:nth-child(2) {
-       top: 125%;
-    } 
-    
-    .animated_icon_div:nth-child(4) {
-       top: 125%;
-    }
-    
-    .animated_icon_div:nth-child(6) {
-       top: 125%;
-    }
-    .timeline::after {
-        animation: moveline 25s linear forwards !important;
-    }
-    .container_part .animated_icon {
-        position: relative;
-        width: 42px;
-        left: 7px;
-        top: 7px;
-        z-index: 10;
-    }
-    .product_container{
-        /* display: flex; */
-        justify-content: end;
-    }
-    .left_container{
-        padding-left: 3.5rem !important;
-    }
-    .timeline {
-        margin: 50px auto;
-    }
-
-    .timeline::after {
-        left: 31px !important;
-    }
-
-    .container_part {
-        width: 100%;
-        padding-left: 80px;
-        padding-right: 25px;
-    }
-    .product_desc {
-        font-size: 17px;
-    }
-    .text_box {
-        font-size: 16px;
-        padding-top: 2rem;
-    }
-
-    .text_box small {
-        margin-bottom: 10px;
-    }
-
-    .right_container {
-        left: 0;
-        z-index: -2;
-    }
-
-    .left_container img,
-    .right_container img {
-        left: 10px;
-    }
-}
-
-.timeline::after {
-    content: '';
-    position: absolute;
-    width: 10px;
-    height: 50%;
-    background: #15227e;
-    top: 0;
-    left: 50%;
-    margin-left: -3px;
-    z-index: -1;
-    animation: moveline 12s linear forwards;
-}
-
-@keyframes moveline {
-    0% {
-        height: 0;
-    }
-
-    100% {
-        height: 100%;
-    }
-}
-
+#agro_commodities{padding:60px 0}@media only screen and (min-width:320px) and (max-width:768px){.breadcrums_title{font-size:40px;text-align:center}}.timeline{position:relative;margin:auto}.product_card{display:flex;align-items:center;justify-content:center;padding-bottom:5rem;position:relative;animation:movedown 1s linear forwards;opacity:0}.product_card:nth-child(1){animation-delay:0s}.product_card:nth-child(2){animation-delay:1s}.product_card:nth-child(3){animation-delay:2s}.product_card:nth-child(4){animation-delay:3s}.product_card:nth-child(5){animation-delay:4s}.product_card:nth-child(6){animation-delay:5s;padding-bottom:0}@keyframes movedown{0%{opacity:1;transform:translateY(-30px)}100%{opacity:1;transform:translateY(0)}}.text_box{padding:0 20px;background-color:#fff;position:relative;border-radius:6px;font-size:18px}.text_card{font-size:32px;font-weight:500;color:#15227e}.text_box h2{font-weight:600}.product_desc{font-size:18px;text-align:justify}.ul_list{padding:1px}.ul_list li{list-style:none;font-size:18px;padding:7px 0}.ul_list li i{color:#15227e;font-size:22px}.right_container{padding-left:4.1rem!important}.animated_icon_div{position:absolute;width:80px;height:80px;border:1px solid black;background:white;border-radius:50%;right:-7.5%;top:40%;z-index:10}@media only screen and (min-width:769px) and (max-width:1199px){.animated_icon_div{right:-10.5%}}@media only screen and (min-width:1200px) and (max-width:1400px){.animated_icon_div{right:-9%}}@media only screen and (min-width:1400px) and (max-width:3000px){.animated_icon_div{right:-7.5%}}@media only screen and (min-width:1280px){.right_container{padding-left:4.2rem!important}}.container_part{position:relative;z-index:-1}.container_part .animated_icon{position:relative;width:50px;right:-15px;top:15px;z-index:10}@media only screen and (min-width:320px) and (max-width:768px){.animated_icon_div{position:absolute;width:60px;height:60px;border-radius:50%;background:white;left:-7px;top:13%;z-index:10}.animated_icon_div:nth-child(2){top:125%}.animated_icon_div:nth-child(4){top:125%}.animated_icon_div:nth-child(6){top:125%}.timeline::after{animation:moveline 25s linear forwards!important}.container_part .animated_icon{position:relative;width:42px;left:7px;top:7px;z-index:10}.product_container{justify-content:end}.left_container{padding-left:3.5rem!important}.timeline{margin:50px auto}.timeline::after{left:31px!important}.container_part{width:100%;padding-left:80px;padding-right:25px}.product_desc{font-size:17px}.text_box{font-size:16px;padding-top:2rem}.text_box small{margin-bottom:10px}.right_container{left:0;z-index:-2}.left_container img,.right_container img{left:10px}}.timeline::after{content:'';position:absolute;width:10px;height:50%;background:#15227e;top:0;left:50%;margin-left:-3px;z-index:-1;animation:moveline 12s linear forwards}@keyframes moveline{0%{height:0}100%{height:100%}}
