--- a/src/pages/Products/Chemicals/searchbar.css
+++ b/src/pages/Products/Chemicals/searchbar.css
@@ -1,70 +1,1 @@
-.input_box{
-    /* margin-top: 5rem; */
-    height: 45vh;
-    background-color: #eff6f7;
-    /* box-shadow: ; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.input-container {
-    z-index: 1;
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding: 0% 0 5% 0%;
-    font-size: 16px;
-  }
-  @media only screen and (min-width:320px) and (max-width:768px){
-    .input-container {
-        padding: 0% 0% 0% 0%;
-      } 
-  }
-  .search_input {
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    padding: 18px 16px;
-    background-color: transparent;
-    cursor: pointer;
-    transition: all .5s ease-in-out;
-  }
-  
-  .search_input::placeholder {
-    color: transparent;
-  }
-  
-  .search_input:focus::placeholder {
-    color: rgb(131, 128, 128);
-  }
-  
-  .search_input:focus,.search_input:not(:placeholder-shown) {
-    background-color: #fff;
-    border: 2px solid #15227e;
-    width: 290px;
-    cursor: none;
-    padding: 18px 16px 18px 45px;
-  }
-  
-  .search_icon {
-    position: absolute;
-    left: 0;
-    height: 45px;
-    width: 45px;
-    background-color: #fff;
-    border-radius: 99px;
-    z-index: -1;
-    fill: #15227e;
-    border: 1px solid #15227e;
-  }
-  
-  .search_input:focus + .search_icon,.search_input:not(:placeholder-shown) + .search_icon {
-    z-index: 0;
-    background-color: transparent;
-    border: none;
-  }
-  
+.input_box{height:45vh;background-color:#eff6f7;display:flex;flex-direction:column;align-items:center;justify-content:center}.input-container{z-index:1;position:relative;display:flex;align-items:center;padding:0 0 5% 0%;font-size:16px}@media only screen and (min-width:320px) and (max-width:768px){.input-container{padding:0 0% 0% 0%}}.search_input{width:40px;height:40px;border-radius:20px;border:none;outline:none;padding:18px 16px;background-color:transparent;cursor:pointer;transition:all .5s ease-in-out}.search_input::placeholder{color:transparent}.search_input:focus::placeholder{color:rgb(131,128,128)}.search_input:focus,.search_input:not(:placeholder-shown){background-color:#fff;border:2px solid #15227e;width:290px;cursor:none;padding:18px 16px 18px 45px}.search_icon{position:absolute;left:0;height:45px;width:45px;background-color:#fff;border-radius:99px;z-index:-1;fill:#15227e;border:1px solid #15227e}.search_input:focus + .search_icon,.search_input:not(:placeholder-shown) + .search_icon{z-index:0;background-color:transparent;border:none}
