--- a/src/App.css
+++ b/src/App.css
@@ -1286,8 +1286,8 @@ section {
 
 #team .member {
     text-align: center;
-    margin-bottom: 20px;
-    background: rgba(239, 246, 247, .6);
+    /* margin-bottom: 20px; */
+    /* background: rgba(239, 246, 247, .6); */
     position: relative
 }
 
@@ -2105,9 +2105,9 @@ section {
 
 .team .member {
     text-align: center;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     background: #fff;
-    border: 1px solid rgba(14, 29, 52, .15)
+    /* border: 1px solid rgba(14, 29, 52, .15) */
 }
 
 .team .member img {
